final modifications before submission, corrected reverse station lookup, removed wow/animate js on mobile, cleaned up sass

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -71,3 +71,11 @@ img {
 		display: none;
 	}
 }
+
+
+@include respond-to('small') {
+    .wow{
+        animation-name: none !important;
+        visibility: visible !important;
+    }
+}
