--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -16,6 +16,7 @@ header {
 		}
 	}
 	background-image: url(../images/bgAlcohol.png);
+	background-position: center center;
 	height: 100vh;
 	.animated {
 	}
